# PHA

./: LICENSE  pyproject.toml  requirements.txt
data/: transactions_2022.xlsx  transactions_2023.xlsx  transactions_2024-messy.xlsx  transactions_2025.xlsx
notebooks/: Donations.ipynb
pha_tools/: io.py
test/: test_io.py
