[project]
name = "pha_tools"
version = "0.0.1"
authors = [
    {name="Tim Diller", email="tim@dillerdigital.com"},
]
description = "Data analysis tools for Potters House Association"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/DillerDigital/PHA"
Issues = "https://github.com/DillerDigital/PHA/issues"
